Añadida página de registro, funciones para acceder, expresiones regulares.

--- a/src/app/core/navbar/navbar.html
+++ b/src/app/core/navbar/navbar.html
@@ -12,7 +12,7 @@
 
     <div class="nav-actions">
       <button class="btn btn-ghost">Iniciar sesión</button>
-      <button class="btn btn-primary">Registrarse</button>
+      <button class="btn btn-primary" (click)="navigationToRegister()">Registrarse</button>
     </div>
   </div>
 </nav>
